@@ -1,6 +1,7 @@
 /* assert.cc: Handle the assert macro for WIN32.
 
-   Copyright 1997, 1998, 2000, 2001, 2002, 2007, 2008, 2009, 2011 Red Hat, Inc.
+   Copyright 1997, 1998, 2000, 2001, 2002, 2007, 2008, 2009, 2011, 2013
+   Red Hat, Inc.
 
 This file is part of Cygwin.
 
@@ -9,8 +10,6 @@ Cygwin license.  Please consult the file "CYGWIN_LICENSE" for
 details. */
 
 #include "winsup.h"
-#include <wingdi.h>
-#include <winuser.h>
 
 #include <assert.h>
 #include <stdlib.h>
