@@ -13,8 +13,6 @@ details. */
 
 #include "winsup.h"
 #include <wchar.h>
-#include <wingdi.h>
-#include <winuser.h>
 #include "cygerrno.h"
 #include "path.h"
 #include "fhandler.h"
