@@ -13,8 +13,6 @@ Cygwin license.  Please consult the file "CYGWIN_LICENSE" for
 details. */
 
 #include "winsup.h"
-#include <wingdi.h>
-#include <winuser.h>
 #include "cygerrno.h"
 #include "path.h"
 #include "fhandler.h"
