@@ -10,8 +10,6 @@ Cygwin license.  Please consult the file "CYGWIN_LICENSE" for
 details. */
 
 #include "winsup.h"
-#include <wingdi.h>
-#include <winuser.h>
 #include <ctype.h>
 #include "cygerrno.h"
 #include "pinfo.h"
