@@ -1,7 +1,7 @@
 /* strfuncs.cc: string functions
 
    Copyright 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006,
-   2007, 2008, 2009, 2010, 2011, 2012 Red Hat, Inc.
+   2007, 2008, 2009, 2010, 2011, 2012, 2013 Red Hat, Inc.
 
 This file is part of Cygwin.
 
@@ -13,7 +13,6 @@ details. */
 #include <stdlib.h>
 #include <sys/param.h>
 #include <wchar.h>
-#include <winnls.h>
 #include <ntdll.h>
 #include "path.h"
 #include "fhandler.h"
