@@ -24,7 +24,6 @@ details. */
 #define pwrite __FOO_pwrite
 
 #include "winsup.h"
-#include <winnls.h>
 #include "miscfuncs.h"
 #include <sys/stat.h>
 #include <sys/vfs.h> /* needed for statfs */
