@@ -12,14 +12,18 @@ details. */
 #define _WINLEAN_H 1
 #define WIN32_LEAN_AND_MEAN 1
 
-/* Mingw64 */
-#define _WINNLS_
-#define _WINNETWK_
-#define _WINSVC_
+/* The following macros have to be defined, otherwise the autoload mechanism
+   in autoload.cc leads to "multiple definition" errors.  The macros control
+   the declarations of symbols in the Mingw64 w32api headers.  If they are
+   not defined, a DECLSPEC_IMPORT will be added to the symbol declarations.
+   This leads to a definition of the symbols in the sources using the
+   autoloaded symbols, which in turn clashes with the definition in the
+   w32api library exporting the symbols. */
 #define _ADVAPI32_
 #define _DSGETDCAPI_
 #define _GDI32_
 #define _KERNEL32_
+#define _NORMALIZE_
 #define _OLE32_
 #define _SHELL32_
 #define _SPOOL32_
@@ -74,10 +78,6 @@ details. */
 #ifdef __undef_CRITICAL
 #undef CRITICAL
 #endif
-
-#undef _WINNLS_
-#undef _WINNETWK_
-#undef _WINSVC_
 
 /* When Terminal Services are installed, the GetWindowsDirectory function
    does not return the system installation dir, but a user specific directory
